samples/_failures_safe/1761167099_23f7e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5897f79.c: In function ‘main’:
./samples/SAFE/__tmp_c5897f79.c:164:5: error: expected ‘,’ or ‘;’ at end of input
  164 |     int token_count = tokenize
      |     ^~~
./samples/SAFE/__tmp_c5897f79.c:164:5: error: expected declaration or statement at end of input
